finished extracting links to single match stats

--- a/dataset/match_stats/01_links_extraction.ipynb
+++ b/dataset/match_stats/01_links_extraction.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(11, 23)]"
+    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(11, 24)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,12 +79,19 @@
     "        \n",
     "        # If the previous sibling of the current 'DIV' element (single match) is an 'h4' element, get the\n",
     "        # date of the match from it, otherwise the date of the match is the same as the previous match.\n",
-    "        previous_element = match_div.previous_sibling.previous_sibling\n",
-    "        match_date = previous_element.text if previous_element.name == 'h4' else last_date\n",
-    "        last_date = match_date\n",
+    "        if match_div.previous_sibling is None:\n",
+    "            match_date = last_date\n",
+    "        else:\n",
+    "            previous_element = match_div.previous_sibling.previous_sibling\n",
+    "            if previous_element.name == 'h4':\n",
+    "                match_date = previous_element.text \n",
+    "                last_date = match_date\n",
+    "            else:\n",
+    "                match_date = last_date\n",
     "        \n",
     "        # Appending the data of the current match to the list of all matches\n",
     "        all_matches.append([\n",
+    "            league_season,\n",
     "            match_date,\n",
     "            team_names[0],\n",
     "            team_names[1],\n",
@@ -92,19 +99,18 @@
     "        ])\n",
     "\n",
     "    result = pd.DataFrame(all_matches, columns=[\n",
+    "        'season',\n",
     "        'date',\n",
     "        'home',\n",
     "        'away',\n",
     "        'link'])\n",
     "\n",
-    "    return result;\n",
-    "\n",
-    "rows = extract_games('2011-12')"
+    "    return result;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +134,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>season</th>\n",
        "      <th>date</th>\n",
        "      <th>home</th>\n",
        "      <th>away</th>\n",
@@ -137,6 +144,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2011-12</td>\n",
        "      <td>Sunday 13th May</td>\n",
        "      <td>Espanyol</td>\n",
        "      <td>Sevilla</td>\n",
@@ -144,6 +152,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2011-12</td>\n",
        "      <td>Sunday 13th May</td>\n",
        "      <td>Getafe</td>\n",
        "      <td>Real Zaragoza</td>\n",
@@ -151,6 +160,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2011-12</td>\n",
        "      <td>Sunday 13th May</td>\n",
        "      <td>Levante</td>\n",
        "      <td>Athletic Bilbao</td>\n",
@@ -158,6 +168,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2011-12</td>\n",
        "      <td>Sunday 13th May</td>\n",
        "      <td>Malaga</td>\n",
        "      <td>Sporting Gijon</td>\n",
@@ -165,6 +176,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2011-12</td>\n",
        "      <td>Sunday 13th May</td>\n",
        "      <td>Racing Santander</td>\n",
        "      <td>Osasuna</td>\n",
@@ -176,84 +188,102 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>375</th>\n",
-       "      <td>Sunday 28th August</td>\n",
-       "      <td>Real Zaragoza</td>\n",
+       "      <th>4624</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>Sunday 14th August</td>\n",
+       "      <td>Almeria</td>\n",
        "      <td>Real Madrid</td>\n",
-       "      <td>https://www.skysports.com/football/real-zarago...</td>\n",
+       "      <td>https://www.skysports.com/football/almeria-vs-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>376</th>\n",
-       "      <td>Sunday 28th August</td>\n",
+       "      <th>4625</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>Saturday 13th August</td>\n",
+       "      <td>Celta Vigo</td>\n",
+       "      <td>Espanyol</td>\n",
+       "      <td>https://www.skysports.com/football/celta-vigo-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4626</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>Saturday 13th August</td>\n",
+       "      <td>Real Valladolid</td>\n",
+       "      <td>Villarreal</td>\n",
+       "      <td>https://www.skysports.com/football/real-vallad...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4627</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>Saturday 13th August</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Rayo Vallecano</td>\n",
+       "      <td>https://www.skysports.com/football/barcelona-v...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4628</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>Friday 12th August</td>\n",
+       "      <td>Osasuna</td>\n",
        "      <td>Sevilla</td>\n",
-       "      <td>Malaga</td>\n",
-       "      <td>https://www.skysports.com/football/sevilla-vs-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>377</th>\n",
-       "      <td>Saturday 27th August</td>\n",
-       "      <td>Sporting Gijon</td>\n",
-       "      <td>Real Sociedad</td>\n",
-       "      <td>https://www.skysports.com/football/sporting-gi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>Saturday 27th August</td>\n",
-       "      <td>Valencia</td>\n",
-       "      <td>Racing Santander</td>\n",
-       "      <td>https://www.skysports.com/football/valencia-vs...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>Saturday 27th August</td>\n",
-       "      <td>Granada</td>\n",
-       "      <td>Real Betis</td>\n",
-       "      <td>https://www.skysports.com/football/granada-vs-...</td>\n",
+       "      <td>https://www.skysports.com/football/osasuna-vs-...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>380 rows × 4 columns</p>\n",
+       "<p>4629 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     date              home              away  \\\n",
-       "0         Sunday 13th May          Espanyol           Sevilla   \n",
-       "1         Sunday 13th May            Getafe     Real Zaragoza   \n",
-       "2         Sunday 13th May           Levante   Athletic Bilbao   \n",
-       "3         Sunday 13th May            Malaga    Sporting Gijon   \n",
-       "4         Sunday 13th May  Racing Santander           Osasuna   \n",
-       "..                    ...               ...               ...   \n",
-       "375    Sunday 28th August     Real Zaragoza       Real Madrid   \n",
-       "376    Sunday 28th August           Sevilla            Malaga   \n",
-       "377  Saturday 27th August    Sporting Gijon     Real Sociedad   \n",
-       "378  Saturday 27th August          Valencia  Racing Santander   \n",
-       "379  Saturday 27th August           Granada        Real Betis   \n",
+       "       season                  date              home             away  \\\n",
+       "0     2011-12       Sunday 13th May          Espanyol          Sevilla   \n",
+       "1     2011-12       Sunday 13th May            Getafe    Real Zaragoza   \n",
+       "2     2011-12       Sunday 13th May           Levante  Athletic Bilbao   \n",
+       "3     2011-12       Sunday 13th May            Malaga   Sporting Gijon   \n",
+       "4     2011-12       Sunday 13th May  Racing Santander          Osasuna   \n",
+       "...       ...                   ...               ...              ...   \n",
+       "4624  2023-24    Sunday 14th August           Almeria      Real Madrid   \n",
+       "4625  2023-24  Saturday 13th August        Celta Vigo         Espanyol   \n",
+       "4626  2023-24  Saturday 13th August   Real Valladolid       Villarreal   \n",
+       "4627  2023-24  Saturday 13th August         Barcelona   Rayo Vallecano   \n",
+       "4628  2023-24    Friday 12th August           Osasuna          Sevilla   \n",
        "\n",
-       "                                                  link  \n",
-       "0    https://www.skysports.com/football/espanyol-vs...  \n",
-       "1    https://www.skysports.com/football/getafe-vs-r...  \n",
-       "2    https://www.skysports.com/football/levante-vs-...  \n",
-       "3    https://www.skysports.com/football/malaga-vs-s...  \n",
-       "4    https://www.skysports.com/football/racing-sant...  \n",
-       "..                                                 ...  \n",
-       "375  https://www.skysports.com/football/real-zarago...  \n",
-       "376  https://www.skysports.com/football/sevilla-vs-...  \n",
-       "377  https://www.skysports.com/football/sporting-gi...  \n",
-       "378  https://www.skysports.com/football/valencia-vs...  \n",
-       "379  https://www.skysports.com/football/granada-vs-...  \n",
+       "                                                   link  \n",
+       "0     https://www.skysports.com/football/espanyol-vs...  \n",
+       "1     https://www.skysports.com/football/getafe-vs-r...  \n",
+       "2     https://www.skysports.com/football/levante-vs-...  \n",
+       "3     https://www.skysports.com/football/malaga-vs-s...  \n",
+       "4     https://www.skysports.com/football/racing-sant...  \n",
+       "...                                                 ...  \n",
+       "4624  https://www.skysports.com/football/almeria-vs-...  \n",
+       "4625  https://www.skysports.com/football/celta-vigo-...  \n",
+       "4626  https://www.skysports.com/football/real-vallad...  \n",
+       "4627  https://www.skysports.com/football/barcelona-v...  \n",
+       "4628  https://www.skysports.com/football/osasuna-vs-...  \n",
        "\n",
-       "[380 rows x 4 columns]"
+       "[4629 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rows"
+    "df = pd.concat(\n",
+    "    [extract_games(league_season) for league_season in league_seasons])\n",
+    "\n",
+    "df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./initial_ds/match_stat_links.csv\", index=False)"
    ]
   }
  ],
