--- a/dataset/matches/02_data_cleanup.ipynb
+++ b/dataset/matches/02_data_cleanup.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./initial_ds/matches.csv')"
+    "df = pd.read_csv(\"./initial_ds/matches.csv\")"
    ]
   },
   {
