--- a/dataset/ratings/01_data_extraction.ipynb
+++ b/dataset/ratings/01_data_extraction.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('./initial_ds/ratings.csv', index=False)"
+    "df.to_csv(\"./initial_ds/ratings.csv\", index=False)"
    ]
   }
  ],
