finished the script to fetch match stats

--- a/dataset/match_stats/01_links_extraction.ipynb
+++ b/dataset/match_stats/01_links_extraction.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,45 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The stats' URL has a  subdirectory of 'stats' which should be inserted before id:\n",
+    "\"https://www.skysports.com/football/espanyol-vs-sevilla/244855\" should become:\n",
+    "\"https://www.skysports.com/football/espanyol-vs-sevilla/stats/244855\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# This function returns the stats' URL of a given match's URL\n",
+    "def get_stats_url(link):\n",
+    "    id_pos = re.search(r\"\\d*$\", link).start()\n",
+    "    return f\"{link[:id_pos]}stats/{link[id_pos:]}\"\n",
+    "\n",
+    "# Going through each link and extracting the stats' link\n",
+    "df['stats_link'] = df['link'].apply(\n",
+    "    lambda link: get_stats_url(link)\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding columns for match stats:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
