cleaned up matches dataset

--- a/dataset/matches/01_data_consolidation.ipynb
+++ b/dataset/matches/01_data_consolidation.ipynb
@@ -10,64 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import re"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "league_name = 'primera'\n",
-    "league_years = [f\"{year}_{year+1}\" for year in range(1999, 2023)]\n",
-    "\n",
-    "match_result_cols = [\n",
-    "    'Div', # League Division\n",
-    "    'Date', # Match Date (dd/mm/yy)\n",
-    "    'Time', # Time of match kick off\n",
-    "    'HomeTeam', # Home Team\n",
-    "    'AwayTeam', # Away Team\n",
-    "    'FTHG and HG', # Full Time Home Team Goals\n",
-    "    'FTAG and AG', # Full Time Away Team Goals\n",
-    "    'FTR and Res', # Full Time Result (H=Home Win, D=Draw, A=Away Win)\n",
-    "    'HTHG', # Half Time Home Team Goals\n",
-    "    'HTAG', # Half Time Away Team Goals\n",
-    "    'HTR', # Half Time Result (H=Home Win, D=Draw, A=Away Win)\n",
-    "]\n",
-    "\n",
-    "match_stats_cols = [\n",
-    "    'Attendance', # Crowd Attendance\n",
-    "    'Referee', # Match Referee\n",
-    "    'HS', # Home Team Shots\n",
-    "    'AS', # Away Team Shots\n",
-    "    'HST', # Home Team Shots on Target\n",
-    "    'AST', # Away Team Shots on Target\n",
-    "    'HHW', # Home Team Hit Woodwork\n",
-    "    'AHW', # Away Team Hit Woodwork\n",
-    "    'HC', # Home Team Corners\n",
-    "    'AC', # Away Team Corners\n",
-    "    'HF', # Home Team Fouls Committed\n",
-    "    'AF', # Away Team Fouls Committed\n",
-    "    'HFKC', # Home Team Free Kicks Conceded\n",
-    "    'AFKC', # Away Team Free Kicks Conceded\n",
-    "    'HO', # Home Team Offsides\n",
-    "    'AO', # Away Team Offsides\n",
-    "    'HY', # Home Team Yellow Cards\n",
-    "    'AY', # Away Team Yellow Cards\n",
-    "    'HR', # Home Team Red Cards\n",
-    "    'AR', # Away Team Red Cards\n",
-    "    'HBP', # Home Team Bookings Points (10', # yellow, 25', # red)\n",
-    "    'ABP', # Away Team Bookings Points (10', # yellow, 25', # red)\n",
-    "]"
+    "league_years = [f\"{year}_{year+1}\" for year in range(2011, 2023)]"
    ]
   },
   {
@@ -76,33 +36,16 @@
    "id": "e7d12778",
    "metadata": {},
    "source": [
+    "# Reading the dataset files\n",
     "Reading all the data from files into separate dataframes; which will later be consolidated into a single one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24 dataframes were read.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['1999_2000', '2000_2001', '2001_2002', '2002_2003', '2003_2004', '2004_2005', '2005_2006', '2006_2007', '2007_2008', '2008_2009', '2009_2010', '2010_2011', '2011_2012', '2012_2013', '2013_2014', '2014_2015', '2015_2016', '2016_2017', '2017_2018', '2018_2019', '2019_2020', '2020_2021', '2021_2022', '2022_2023'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This dictionary will hold every single separate dataframe\n",
     "df_list = dict()\n",
@@ -112,73 +55,189 @@
     "    dataset_file = f\"./initial_ds/{league_name}_{league_year}.csv\"\n",
     "    # Reading the league's data from the file\n",
     "    cur_df = pd.read_csv(dataset_file)\n",
-    "    # Removing the columns corresponding to betting odds\n",
-    "    cur_df = cur_df[[col for col in cur_df if col in match_result_cols+match_stats_cols]]\n",
     "    # Removing the rows which contain only Null values\n",
     "    cur_df = cur_df.dropna(axis='index', how=\"all\")\n",
     "    # Removing the columns which contain only Null values\n",
     "    cur_df = cur_df.dropna(axis=\"columns\", how='all')\n",
     "    # Adding the season as a new column\n",
-    "    cur_df['season'] = league_year\n",
-    "    df_list[league_year] = cur_df\n",
-    "        \n",
-    "print(f\"{len(df_list)} dataframes were read.\")\n",
+    "    cur_df.insert(1, 'season', league_year, True)\n",
+    "    df_list[league_year] = cur_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "097c3e18",
+   "metadata": {},
+   "source": [
+    "# Merging the dataframes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "47f86e59",
+   "metadata": {},
+   "source": [
+    "Getting the accululated list of all the columns available in all dataframes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "6cf318df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_cols = dict()\n",
+    "for df_name, df_table in df_list.items():\n",
+    "    for col in df_table.columns:\n",
+    "        all_cols[col] = all_cols[col] + [df_name] if col in all_cols.keys() else [df_name]\n",
     "\n",
-    "df_list.keys()"
+    "all_cols = dict(sorted(all_cols.items(), key=lambda item: len(item[1]), reverse=True))        "
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "30591987",
+   "id": "2b4c8036",
    "metadata": {},
    "source": [
-    "All columns available in one year are also available in the next:"
+    "Merging all the separate dataframes into a single one"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "14d8544f",
+   "execution_count": 110,
+   "id": "61ab83be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Comparing the dataframe for each season with the next season and printing the list of the columns that\n",
-    "# are available in the older season and unavailable in the newer\n",
-    "for i in range(len(league_years) - 1):\n",
-    "    cur_league = f\"{league_years[i]}\"\n",
-    "    next_league = f\"{league_years[i+1]}\"\n",
-    "    unmatched_cols = [col for col in df_list[cur_league].columns if col not in df_list[next_league].columns]\n",
-    "    if unmatched_cols:\n",
-    "        print(f\"columns in {cur_league} and unavailable in {next_league}:\\n{unmatched_cols}\\n\")"
+    "df = pd.DataFrame(columns=all_cols.keys())\n",
+    "for df_season in df_list.values():\n",
+    "    df = pd.concat([df, df_season], axis=0)  "
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "184b4b17",
+   "id": "03d21e78",
    "metadata": {},
    "source": [
-    "So the dataframes can be merged into a single one with the columns corresponding to the most recent one:"
+    "# Cleaning up"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cc950fbc",
+   "metadata": {},
+   "source": [
+    "Getting the list of the columns that are present in all of the recent seasons:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "613c1069",
+   "execution_count": 111,
+   "id": "df8bf6cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merging all the dataframes of different seasons of the same league together\n",
-    "df = pd.concat(\n",
-    "    [df_list[league] for league in df_list.keys()],\n",
-    "    axis='index'\n",
-    ")"
+    "main_cols = []\n",
+    "\n",
+    "for col, seasons in all_cols.items():\n",
+    "    if all([season in seasons for season in league_years]):\n",
+    "        main_cols.append(col)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "63917d38",
+   "metadata": {},
+   "source": [
+    "Dropping all other columns:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
+   "id": "3d5ed6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[main_cols]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0165afd1",
+   "metadata": {},
+   "source": [
+    "# Renaming the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "093020c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\n",
+    "    'Div': 'division',\n",
+    "    'Date': 'date',\n",
+    "    'HomeTeam': 'home', \n",
+    "    'AwayTeam': 'away',\n",
+    "    'FTHG': 'fulltime_home_goals',\n",
+    "    'FTAG': 'fulltime_away_goals',\n",
+    "    'FTR': 'fulltime_result',\n",
+    "    'HTHG': 'halftime_home_goals',\n",
+    "    'HTAG': 'halftime_away_goals',\n",
+    "    'HTR': 'halftime_result',\n",
+    "    'HS': 'home_total_shots',\n",
+    "    'AS': 'away_total_shots',\n",
+    "    'HST': 'home_shots_on_target',\n",
+    "    'AST': 'away_shots_on_target',\n",
+    "    'HF': 'home_fouls_committed',\n",
+    "    'AF': 'away_fouls_committed',\n",
+    "    'HC': 'home_corners',\n",
+    "    'AC': 'away_corners',\n",
+    "    'HY': 'home_yellow_cards',\n",
+    "    'AY': 'away_yellow_cards',\n",
+    "    'HR': 'home_red_cards',\n",
+    "    'AR': 'away_red_cards',\n",
+    "    'B365H': 'bet365_home_win_odds',\n",
+    "    'B365D': 'bet365_draw_odds',\n",
+    "    'B365A': 'bet365_away_win_odds',\n",
+    "    'BWH': 'betandwin_home_win_odds',\n",
+    "    'BWD': 'betandwin_draw_odds',\n",
+    "    'BWA': 'betandwin_away_win_odds',\n",
+    "    'IWH': 'interwetten_home_win_odds',\n",
+    "    'IWD': 'interwetten_draw_odds',\n",
+    "    'IWA': 'interwetten_away_win_odds',\n",
+    "    'WHH': 'williamhill_home_win_odds',\n",
+    "    'WHD': 'williamhill_draw_odds',\n",
+    "    'WHA': 'williamhill_away_win_odds',\n",
+    "    'VCH': 'vcbet_home_win_odds',\n",
+    "    'VCD': 'vcbet_draw_odds',\n",
+    "    'VCA': 'vcbet_away_win_odds',\n",
+    "})"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2bbc11e6",
+   "metadata": {},
+   "source": [
+    "# Saving the consolidated dataset into file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "3b5d2318",
    "metadata": {},
    "outputs": [],
