limited the years of data; finished scraping match stats

--- a/dataset/match_stats/01_links_extraction.ipynb
+++ b/dataset/match_stats/01_links_extraction.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(11, 24)]"
+    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(17, 23)]"
    ]
   },
   {
@@ -110,171 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>date</th>\n",
-       "      <th>home</th>\n",
-       "      <th>away</th>\n",
-       "      <th>link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-12</td>\n",
-       "      <td>Sunday 13th May</td>\n",
-       "      <td>Espanyol</td>\n",
-       "      <td>Sevilla</td>\n",
-       "      <td>https://www.skysports.com/football/espanyol-vs...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-12</td>\n",
-       "      <td>Sunday 13th May</td>\n",
-       "      <td>Getafe</td>\n",
-       "      <td>Real Zaragoza</td>\n",
-       "      <td>https://www.skysports.com/football/getafe-vs-r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-12</td>\n",
-       "      <td>Sunday 13th May</td>\n",
-       "      <td>Levante</td>\n",
-       "      <td>Athletic Bilbao</td>\n",
-       "      <td>https://www.skysports.com/football/levante-vs-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-12</td>\n",
-       "      <td>Sunday 13th May</td>\n",
-       "      <td>Malaga</td>\n",
-       "      <td>Sporting Gijon</td>\n",
-       "      <td>https://www.skysports.com/football/malaga-vs-s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-12</td>\n",
-       "      <td>Sunday 13th May</td>\n",
-       "      <td>Racing Santander</td>\n",
-       "      <td>Osasuna</td>\n",
-       "      <td>https://www.skysports.com/football/racing-sant...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4624</th>\n",
-       "      <td>2023-24</td>\n",
-       "      <td>Sunday 14th August</td>\n",
-       "      <td>Almeria</td>\n",
-       "      <td>Real Madrid</td>\n",
-       "      <td>https://www.skysports.com/football/almeria-vs-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4625</th>\n",
-       "      <td>2023-24</td>\n",
-       "      <td>Saturday 13th August</td>\n",
-       "      <td>Celta Vigo</td>\n",
-       "      <td>Espanyol</td>\n",
-       "      <td>https://www.skysports.com/football/celta-vigo-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4626</th>\n",
-       "      <td>2023-24</td>\n",
-       "      <td>Saturday 13th August</td>\n",
-       "      <td>Real Valladolid</td>\n",
-       "      <td>Villarreal</td>\n",
-       "      <td>https://www.skysports.com/football/real-vallad...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4627</th>\n",
-       "      <td>2023-24</td>\n",
-       "      <td>Saturday 13th August</td>\n",
-       "      <td>Barcelona</td>\n",
-       "      <td>Rayo Vallecano</td>\n",
-       "      <td>https://www.skysports.com/football/barcelona-v...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4628</th>\n",
-       "      <td>2023-24</td>\n",
-       "      <td>Friday 12th August</td>\n",
-       "      <td>Osasuna</td>\n",
-       "      <td>Sevilla</td>\n",
-       "      <td>https://www.skysports.com/football/osasuna-vs-...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4629 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       season                  date              home             away  \\\n",
-       "0     2011-12       Sunday 13th May          Espanyol          Sevilla   \n",
-       "1     2011-12       Sunday 13th May            Getafe    Real Zaragoza   \n",
-       "2     2011-12       Sunday 13th May           Levante  Athletic Bilbao   \n",
-       "3     2011-12       Sunday 13th May            Malaga   Sporting Gijon   \n",
-       "4     2011-12       Sunday 13th May  Racing Santander          Osasuna   \n",
-       "...       ...                   ...               ...              ...   \n",
-       "4624  2023-24    Sunday 14th August           Almeria      Real Madrid   \n",
-       "4625  2023-24  Saturday 13th August        Celta Vigo         Espanyol   \n",
-       "4626  2023-24  Saturday 13th August   Real Valladolid       Villarreal   \n",
-       "4627  2023-24  Saturday 13th August         Barcelona   Rayo Vallecano   \n",
-       "4628  2023-24    Friday 12th August           Osasuna          Sevilla   \n",
-       "\n",
-       "                                                   link  \n",
-       "0     https://www.skysports.com/football/espanyol-vs...  \n",
-       "1     https://www.skysports.com/football/getafe-vs-r...  \n",
-       "2     https://www.skysports.com/football/levante-vs-...  \n",
-       "3     https://www.skysports.com/football/malaga-vs-s...  \n",
-       "4     https://www.skysports.com/football/racing-sant...  \n",
-       "...                                                 ...  \n",
-       "4624  https://www.skysports.com/football/almeria-vs-...  \n",
-       "4625  https://www.skysports.com/football/celta-vigo-...  \n",
-       "4626  https://www.skysports.com/football/real-vallad...  \n",
-       "4627  https://www.skysports.com/football/barcelona-v...  \n",
-       "4628  https://www.skysports.com/football/osasuna-vs-...  \n",
-       "\n",
-       "[4629 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.concat(\n",
     "    [extract_games(league_season) for league_season in league_seasons])\n",
     "\n",
-    "df.reset_index(drop=True)"
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
@@ -289,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
