--- a/dataset/matches/dataset_processing.ipynb
+++ b/dataset/matches/dataset_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 174,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 175,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "league_name = 'primera'\n",
-    "league_years = [f\"{year}_{year+1}\" for year in range(2011, 2023)]"
+    "league_years = [f\"{year}_{year+1}\" for year in range(2017, 2023)]"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 176,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 177,
    "id": "6cf318df",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 178,
    "id": "61ab83be",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 179,
    "id": "df8bf6cd",
    "metadata": {},
    "outputs": [],
@@ -161,12 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 180,
    "id": "3d5ed6ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[main_cols]"
+    "df = df[main_cols]\n",
+    "\n",
+    "# Dropping the division column (since they are all primera)\n",
+    "df = df.drop('Div', axis='columns')"
    ]
   },
   {
@@ -175,18 +178,18 @@
    "id": "0165afd1",
    "metadata": {},
    "source": [
-    "# Renaming the columns"
+    "## Renaming the columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 181,
    "id": "093020c3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "df = df.rename(columns={\n",
-    "    'Div': 'division',\n",
     "    'Date': 'date',\n",
     "    'HomeTeam': 'home', \n",
     "    'AwayTeam': 'away',\n",
@@ -217,32 +220,70 @@
     "    'IWH': 'interwetten_home_win_odds',\n",
     "    'IWD': 'interwetten_draw_odds',\n",
     "    'IWA': 'interwetten_away_win_odds',\n",
+    "    'PSH': 'pinnaclesports_home_win_odds',\n",
+    "    'PSD': 'pinnaclesports_draw_odds',\n",
+    "    'PSA': 'pinnaclesports_away_win_odds',\n",
     "    'WHH': 'williamhill_home_win_odds',\n",
     "    'WHD': 'williamhill_draw_odds',\n",
     "    'WHA': 'williamhill_away_win_odds',\n",
     "    'VCH': 'vcbet_home_win_odds',\n",
     "    'VCD': 'vcbet_draw_odds',\n",
     "    'VCA': 'vcbet_away_win_odds',\n",
+    "    'PSCH': 'pinnaclesports_closing_home_win_odds',\n",
+    "    'PSCD': 'pinnaclesports_closing_draw_odds',\n",
+    "    'PSCA': 'pinnaclesports_closing_away_win_odds',\n",
     "})"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2bbc11e6",
+   "id": "1af6d886",
    "metadata": {},
    "source": [
-    "# Saving the consolidated dataset into file"
+    "## Correcting the dates\n",
+    "The dates are currently of type string (object). They need to be converted into DateTime.<br>\n",
+    "However, before doing that, some values must be tweaked to conform to conventional date formats.<br>\n",
+    "For instance:\n",
+    "<ul>\n",
+    "    <li>'%d/%m/99' must be converted to '%d/%m/1999'</li>\n",
+    "    <li>'%d/%m/00' must be converted to '%d/%m/2000'</li>\n",
+    "    <li>'%d/%m/01' must be converted to '%d/%m/2001'</li>\n",
+    "    <li>...</li>\n",
+    "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "3b5d2318",
+   "execution_count": 182,
+   "id": "0960411c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./initial_ds/matches.csv\", index=False)"
+    "# Setting the required corrections in terms of RegEx\n",
+    "replacements = dict(dict((f\"/{str(y).zfill(2)}$\", f\"/{2000 + y}\") for y in range(17, 24)))\n",
+    "# Fixing the inconsistencies in the date columns\n",
+    "df['date'] = df['date'].replace(replacements, regex=True)\n",
+    "# Converting the date column from object to DateTime64\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%d/%m/%Y')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dee0b89f",
+   "metadata": {},
+   "source": [
+    "# Saving the cleaned up dataset into file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "60cd497e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./processed_ds/matches.csv\", index=False)"
    ]
   }
  ],
